[project]
name = "code-review-openenv"
version = "1.0.0"
description = "A real-world OpenEnv environment for AI code review"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.10.6",
    "openai>=1.30.1",
    "requests>=2.31.0",
    "python-multipart>=0.0.9",
    "openenv-core>=0.2.0",
]

[project.scripts]
server = "server:app"

[tool.openenv]
name = "code-review-openenv"
version = "1.0.0"
description = "Code review environment where agents identify bugs and security issues in code diffs"
author = "Bhuvanesh726"
tags = ["openenv", "code-review", "security"]
env_class = "CodeReviewEnv"
env_module = "environment"
reset_endpoint = "/reset"
step_endpoint = "/step"
state_endpoint = "/state"
tasks = ["easy_null_pointer", "medium_flask_security", "hard_async_race"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
